ASoC: Add machine driver for SDM845 audio support
Add ALSA based machine driver for SDM845 target to
provide initial audio support.
Add audio config files and change Android.mk, Makefile
and Kbuild to enable audio modules for SDM845 target.

Signed-off-by: Pavel Dubrova <pashadubrova@gmail.com>

--- a/techpack/audio/Makefile
+++ b/techpack/audio/Makefile
@@ -33,6 +33,9 @@ endif
 ifeq ($(CONFIG_ARCH_SM6150), y)
 include $(srctree)/techpack/audio/config/sm6150auto.conf
 endif
+ifeq ($(CONFIG_ARCH_SDM845), y)
+include $(srctree)/techpack/audio/config/sdm845auto.conf
+endif
 endif
 # Use USERINCLUDE when you must reference the UAPI directories only.
 USERINCLUDE     += \
@@ -85,6 +88,10 @@ endif
 ifeq ($(CONFIG_ARCH_SM6150), y)
 LINUXINCLUDE    += \
                 -include $(srctree)/techpack/audio/config/sm6150autoconf.h
+endif
+ifeq ($(CONFIG_ARCH_SDM845), y)
+LINUXINCLUDE    += \
+                -include $(srctree)/techpack/audio/config/sdm845autoconf.h
 endif
 obj-y += soc/
 obj-y += dsp/
