--- a/techpack/audio/Makefile
+++ b/techpack/audio/Makefile
@@ -47,6 +47,7 @@ LINUXINCLUDE    += \
                 -I$(srctree)/techpack/audio/include/uapi \
                 -I$(srctree)/techpack/audio/include/uapi/audio \
                 -I$(srctree)/techpack/audio/include/asoc \
+                -I$(srctree)/techpack/audio/include/elliptic \
                 -I$(srctree)/techpack/audio/include
 
 ifeq ($(CONFIG_QTI_QUIN_GVM), y)
