--- a/techpack/audio/config/sdm845auto.conf
+++ b/techpack/audio/config/sdm845auto.conf
@@ -35,3 +35,5 @@ export CONFIG_SND_SOC_MSM_STUB=y
 export CONFIG_WCD_DSP_GLINK=y
 export CONFIG_MSM_AVTIMER=y
 export CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
+export CONFIG_SND_SOC_TAS2557=y
+export CONFIG_SND_SOC_TAS2559=y
