--- a/drivers/gpu/drm/msm/Kconfig
+++ b/drivers/gpu/drm/msm/Kconfig
@@ -109,3 +109,8 @@ config DRM_MSM_DSI_10NM_PHY
 	default y
 	help
 	  Choose this option if DSI PHY on SDM845 is used on the platform.
+
+config DRM_SDE_XLOG_DEBUG
+	bool "Trigger a panic after the dumping work has completed when SDE error"
+	default n
+	depends on DRM_MSM
