arm64: configs: xiaomi: Disable qcom default touchscreen drivers
Signed-off-by: tanz3 <3222839916@qq.com>

--- a/arch/arm64/configs/xiaomi/sdm845-common.config
+++ b/arch/arm64/configs/xiaomi/sdm845-common.config
@@ -30,5 +30,11 @@ CONFIG_MTD_BLOCK2MTD=y
 # QCACLD
 CONFIG_QCA_CLD_WLAN=y
 
+# Touchscreen
+# CONFIG_TOUCHSCREEN_ST is not set
+# CONFIG_TOUCHSCREEN_FTS is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_TCM is not set
+
 # vDSO
 CONFIG_COMPAT_VDSO=y
