--- a/arch/arm64/boot/dts/qcom-legacy/sdm845/sdm845.dtsi
+++ b/arch/arm64/boot/dts/qcom-legacy/sdm845/sdm845.dtsi
@@ -433,6 +433,7 @@
 
 			clocks = <&clock_rpmh RPMH_CXO_CLK>, <&clock_gcc GPLL0>;
 			clock-names = "xo", "alternate";
+			qcom,no-accumulative-counter;
 			#freq-domain-cells = <2>;
 		};
 	};
