techpack: dataipa: Add sdm845 platform support
Signed-off-by: tanz3 <3222839916@qq.com>

--- a/techpack/dataipa/drivers/platform/msm/Makefile
+++ b/techpack/dataipa/drivers/platform/msm/Makefile
@@ -52,6 +52,19 @@ include $(srctree)/techpack/dataipa/config/dataipa_gsi_V1_GKI.conf
 endif
 endif
 
+ifeq ($(CONFIG_ARCH_SDM845), y)
+LINUXINCLUDE    += -include $(srctree)/techpack/dataipa/config/dataipa_legacy.h
+ifeq ($(CONFIG_QGKI),y)
+include $(srctree)/techpack/dataipa/config/dataipa_legacy_QGKI.conf
+ifeq ($(CONFIG_LOCALVERSION), "-qgki-debug")
+include $(srctree)/techpack/dataipa/config/dataipa_debug.conf
+LINUXINCLUDE    += -include $(srctree)/techpack/dataipa/config/dataipa_debug.h
+endif
+else
+include $(srctree)/techpack/dataipa/config/dataipa_legacy_GKI.conf
+endif
+endif
+
 DATAIPADRVTOP = $(srctree)/techpack/dataipa/drivers/platform/msm
 
 ifneq (,$(filter $(CONFIG_IPA3),y m))
