arm64: dts: Use qcom-legacy path for sdm845
Signed-off-by: tanz3 <3222839916@qq.com>

--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -2,7 +2,11 @@
 dtstree	:= $(srctree)/$(src)
 vendor  := $(dtstree)/vendor
 ifneq "$(wildcard $(vendor)/Makefile)" ""
-    subdir-y += vendor
+    ifeq ($(CONFIG_ARCH_SDM845),y)
+        subdir-y += qcom-legacy
+    else
+        subdir-y += vendor
+    endif
 else
 subdir-y += actions
 subdir-y += al
