--- a/drivers/gpu/drm/Kconfig
+++ b/drivers/gpu/drm/Kconfig
@@ -31,7 +31,7 @@ config DRM_MIPI_DBI
 
 config DRM_MIPI_DSI
 	bool
-	depends on DRM
+	default y if DRM
 
 config DRM_DP_AUX_CHARDEV
 	bool "DRM DP AUX Interface"
@@ -73,7 +73,7 @@ config DRM_DEBUG_SELFTEST
 
 config DRM_KMS_HELPER
 	tristate
-	depends on DRM
+	default y if DRM
 	help
 	  CRTC helpers for KMS drivers.
 
