power: supply: qcom: Add support to make SMB2 charger GKI compliant SMB2 charger drivers and their helper files use several power supply properties on msm-4.19 which cannot be supported on msm-5.4 due to the need for GKI compliance. Add support for main charger to register as an IIO device with individual channels under it corresponding to missing power supply properties from msm-4.19.
Signed-off-by: tanz3 <3222839916@qq.com>

--- a/drivers/power/supply/qcom/Makefile
+++ b/drivers/power/supply/qcom/Makefile
@@ -18,4 +18,5 @@ qti-qbg-main-y	+= qti-qbg.o qbg-sdam.o qbg-battery-profile.o battery-profile-loa
 
 # Legacy
 obj-$(CONFIG_QPNP_FG_GEN3)		+= qpnp-fg-gen3.o fg-memif.o fg-util.o
-obj-$(CONFIG_QPNP_SMB2)			+= step-chg-jeita.o battery.o qpnp-smb2.o smb-lib.o pmic-voter.o storm-watch.o
+obj-$(CONFIG_QPNP_SMB2) += qpnp-smb2-main.o
+qpnp-smb2-main-y += step-chg-jeita.o battery.o qpnp-smb2.o smb-lib.o pmic-voter.o storm-watch.o battery-profile-loader.o smb-iio.o
